--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/de_de.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/de_de.json
@@ -68,8 +68,8 @@
   "text.rei.cheat_items": "[{item_name}] x{item_count} {player_name} gegeben.",
   "text.rei.failed_cheat_items": "§cItems geben fehlgeschlagen.",
   "text.rei.too_long_nbt": "§cGegenstand NBT ist zu lang, um im Multiplayer angewendet zu werden.",
-  "text.rei.tag_match": "Akzeptierter Tag: #%s",
   "text.rei.performance": "Leistungsanalyse",
+  "text.rei.shapeless": "Formlos",
   "ordering.rei.ascending": "Aufsteigend",
   "ordering.rei.descending": "Absteigend",
   "ordering.rei.registry": "Registrierung",
@@ -221,6 +221,7 @@
   "config.roughlyenoughitems.search.asyncSearch": "Asynchrone Suche",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "\"Async Suche\"-Partitionsgröße",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "Kompakte Tabs:",
+  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Kompakte Tab Pfeiltasten:",
   "config.roughlyenoughitems.theme": "Erscheinungsbild:",
   "config.roughlyenoughitems.theme.dark": "Dunkles Design",
   "config.roughlyenoughitems.theme.light": "Helles Design",
@@ -258,7 +259,6 @@
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Rechts (Vanilla)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Korrigier den Vanilla Tab Container (wenn das Rezeptbuch deaktiviert ist):",
   "config.roughlyenoughitems.lighterButtonHover": "Helles Button-Hovern:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Filter für Herstellbare Gegenstände:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Werkzeugknöpfe:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Befehl Spielmodus-Wechsel:",
   "config.roughlyenoughitems.commands.giveCommand": "Geben-Befehl:",
@@ -298,6 +298,8 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Farbig unterstrichen",
   "config.roughlyenoughitems.isFocusModeZoomed": "Autofokus-Modus",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Gezoomt",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Markiert",
+  "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Soll Filter anzeigen:",
   "config.roughlyenoughitems.filteringScreen": "Benutzerdefinierte Filter",
   "config.roughlyenoughitems.filteringRulesScreen": "Benutzerdefinierte Filterregeln",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Filterregel erstellen",
