--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/es_es.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/es_es.json
@@ -9,6 +9,9 @@
   "text.rei.search.field.suggestion": "Buscar...",
   "text.rei.feedback": "¿Algún comentario que quiera dar al desarrollador REI? ¡ %s para enviar sus comentarios!",
   "text.rei.feedback.link": "Haz clic en mí para visitar el formulario de Google",
+  "text.rei.support.me": "¡Apóyame para continuar haciendo REI mejor!",
+  "text.rei.support.me.desc": "Como donador por Patreon de REI, puedes usar una versión de REI para versiones Snapshot de Minecraft.\nAlternativamente, puedes apoyarme financialmente alquilando un servidor en BisectHosting.",
+  "text.rei.support.me.patreon": "Donar por Patreon",
   "text.rei.not.fully.initialized": "¡REI aún no se ha inicializado del todo!",
   "text.rei.not.fully.initialized.tooltip": "Hay etapas faltantes: %s\nSi el problema persiste,\npruebe buscando ayuda con los registros.",
   "text.rei.inventory.highlighting.enabled": "Activar resaltado de inventario",
@@ -109,6 +112,7 @@
   "text.rei.subsets": "Subconjuntos",
   "text.rei.tiny_potato": "Pequeña papita",
   "text.rei.add_favorite_widget": "Añadir...",
+  "text.rei.crash.description": "§cRoughly Enough Items ha experimentado un error durante \"%s\".\n\n§fDetalles del error especificados arriba. Por favor, reporta el error al creador del mod al creador, junto el reporte generado abajo.\n\nSi crees que el error ha sido causado por un bug en Roughly Enough Item, reportalo nuestro buscador de problemas.\n\n§6¡Gracias por tu ayuda!",
   "favorite.section.gamemode": "Modo de Juego",
   "favorite.section.weather": "Clima",
   "tooltip.rei.fluid_amount": "§7Unidad %d",
@@ -207,7 +211,6 @@
   "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aSí",
   "config.roughlyenoughitems.fixTabCloseContainer": "Arreglar el contenedor de la pestaña de vainilla (cuando el libro de recetas está deshabilitado):",
   "config.roughlyenoughitems.lighterButtonHover": "Transición de botón más clara:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Filtro de crafteos:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Botones útiles:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Comando del modo de juego:",
   "config.roughlyenoughitems.commands.giveCommand": "Dar comando:",
