--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/fr_fr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/fr_fr.json
@@ -9,15 +9,26 @@
   "text.rei.search.field.suggestion": "Rechercher...",
   "text.rei.feedback": "Avez-vous des retours à faire au developeur de REI ? %s pour envoyer vos retours!",
   "text.rei.feedback.link": "Cliquez ici pour visiter le formulaire Google",
+  "text.rei.support.me": "Soutenez-moi pour continuer à améliorer REI !",
+  "text.rei.support.me.desc": "En tant que supporter patreon de REI, vous pouvez utiliser la dernière version de REI pour les snapshots Minecraft.\nAlternativement, vous pouvez également me soutenir financièrement en louant un serveur BisectHosting.\n\n%s\n%s",
+  "text.rei.support.me.patreon": "Faire un don sur Patreon",
+  "text.rei.support.me.bisect": "Utilisez le code SHEDANIEL sur BisectHosting",
   "text.rei.not.fully.initialized": "REI pas encore complètement initialisé !",
   "text.rei.not.fully.initialized.tooltip": "Étapes manquantes : %s\nSi cela ne disparaît pas,\nessayez de chercher de l'aide avec les logs !",
   "text.rei.inventory.highlighting.enabled": "Surbrillance de l'inventaire activé",
   "text.rei.inventory.highlighting.enabled.tooltip": "Cela rend les emplacements non correspondant grisés.\nDouble-cliquez sur la barre de recherche pour activer ce mode.",
+  "text.rei.caching.search": "Mise en cache des résultats de recherche de REI...",
+  "text.rei.caching.search.step": "Étape %d/%d (%s%% ) :",
   "text.rei.config.menu.dark_theme": "Thème sombre",
+  "text.rei.config.menu.craftable_filter": "Filtre des recettes réalisables",
   "text.rei.config.menu.display": "Paramètres d'Affichages...",
   "text.rei.config.menu.display.remove_recipe_book": "Enlever le livre des recettes",
+  "text.rei.config.menu.display.left_side_mob_effects": "Effets des créatures à gauche",
   "text.rei.config.menu.display.left_side_panel": "Panneau gauche",
   "text.rei.config.menu.display.scrolling_side_panel": "Défilement du panneau latéral",
+  "text.rei.config.menu.display.caching_entry_rendering": "Mise en cache du rendu des entrées",
+  "text.rei.config.menu.display.side_search_field": "Champ de recherche latéral",
+  "text.rei.config.menu.display.syntax_highlighting": "Coloration Syntaxique",
   "text.rei.config.menu.config": "Plus d'Options...",
   "category.rei.crafting": "Fabrication",
   "category.rei.smelting": "Cuisson",
@@ -45,6 +56,10 @@
   "category.rei.beacon_payment": "Paiement de balise",
   "category.rei.tilling": "Labourage",
   "category.rei.pathing": "Désherbage",
+  "category.rei.waxing": "Cire",
+  "category.rei.wax_scraping": "Grattage à la cire",
+  "category.rei.oxidizing": "Oxydation",
+  "category.rei.oxidation_scraping": "Grattage d'oxydation",
   "category.rei.information": "Informations",
   "text.rei.composting.chance": "§e%d%% de chances",
   "text.rei.composting.page": "Page %d",
@@ -126,6 +141,9 @@
   "text.rei.dispose_here": "Placer ici",
   "text.rei.crash.title": "REI a planté !",
   "text.rei.crash.crash_report": "Ouvrir le Rapport de Crash",
+  "text.rei.changelog.title": "Journal des modifications de REI",
+  "text.rei.changelog.error.missingChangelogFile": "Fichier du journal des modifications manquant !",
+  "text.rei.changelog.error.failedToReadChangelogFile": "Impossible de lire le fichier du journal des modifications !",
   "favorite.section.gamemode": "Mode de jeu",
   "favorite.section.weather": "Météo",
   "favorite.section.time": "Temps",
@@ -229,10 +247,11 @@
   "config.roughlyenoughitems.disableRecipeBook": "Livre de recettes :",
   "config.roughlyenoughitems.disableRecipeBook.boolean.true": "§cNon",
   "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aOui",
+  "config.roughlyenoughitems.leftSideMobEffects": "Position des effets des créatures :",
   "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "Gauche",
+  "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Droite (Vanilla)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Corriger l'onglet Vanilla dans les contenants (livre de recettes désactivé) :",
   "config.roughlyenoughitems.lighterButtonHover": "Bouton survolé plus clair :",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Filtre des recettes réalisables :",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Boutons utilitaires :",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Commande pour le mode de jeu :",
   "config.roughlyenoughitems.commands.giveCommand": "Commande pour donner :",
