--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ja_jp.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ja_jp.json
@@ -9,6 +9,10 @@
   "text.rei.search.field.suggestion": "検索...",
   "text.rei.feedback": "REI 開発者にフィードバックを送信したいですか？ %s からフィードバックを送信できます！",
   "text.rei.feedback.link": "クリックでGoogle フォームにアクセス",
+  "text.rei.support.me": "REIをより良いものにするためにも、ご支援をお願い致します！",
+  "text.rei.support.me.desc": "REIのPatreonの支援者になると、Minecraftスナップショット向けのREIの最新バージョンを使えるようになります。\nそして、BisectHostingサーバーを借りることで、経済的な支援にもなります。\n\n%s\n%s",
+  "text.rei.support.me.patreon": "Patreonで寄付する",
+  "text.rei.support.me.bisect": "BisectHostingでコード「SHEDANIEL」を利用できます",
   "text.rei.not.fully.initialized": "REIはまだ完全に初期化されていません！",
   "text.rei.not.fully.initialized.tooltip": "初期化中に問題が発生しました：%s\nこれが表示され続ける場合は\nログとともにサポートに報告してください！",
   "text.rei.inventory.highlighting.enabled": "インベントリハイライト ON",
@@ -162,6 +166,7 @@
   "config.roughlyenoughitems.functionality": "機能",
   "config.roughlyenoughitems.advanced": "高度な設定",
   "config.roughlyenoughitems.cheating": "チート機能を有効：",
+  "config.roughlyenoughitems.cheating.when_creative": "クリエイティブモード時",
   "config.roughlyenoughitems.favoritesEnabled": "お気に入り機能を有効：",
   "config.roughlyenoughitems.keyBindings": "キーバインド",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "レシピの表示：",
@@ -201,7 +206,9 @@
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "上側",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "下側",
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "同じ内容の時マージ表示:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "お気に入り追加ボタン：",
   "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "常に非表示",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "自動的に隠す",
   "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "常に表示",
   "config.roughlyenoughitems.filteredEntries.selectAll": "すべて選択",
   "config.roughlyenoughitems.filteredEntries.selectNone": "すべて解除",
@@ -248,7 +255,6 @@
   "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "左側",
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "右側（デフォルト）",
   "config.roughlyenoughitems.fixTabCloseContainer": "バニラタブコンテナを修正(レシピ本が無効になった場合):",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "クラフタブルフィルター（クラフト可能なアイテム表示）：",
   "config.roughlyenoughitems.layout.showUtilsButtons": "ユーティリティボタン:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "ゲームモードを変更するコマンド：",
   "config.roughlyenoughitems.commands.giveCommand": "アイテムを付与するコマンド：",
