--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ko_kr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ko_kr.json
@@ -9,16 +9,26 @@
   "text.rei.search.field.suggestion": "검색...",
   "text.rei.feedback": "REI 개발자에게 하고 싶은 피드백이 있나요? %s 하려면 클릭해주세요!",
   "text.rei.feedback.link": "Google Form에 접속하여 피드백을 제출",
+  "text.rei.support.me": "REI가 발전할 수 있게 후원해주세요!",
+  "text.rei.support.me.desc": "Patreon에서 후원을 하면 마인크래프트의 스냅샷을 위한 최신 버전의 REI를 사용할 수 있습니다.\n또, BisectHosting 호스팅비를 지원할 수 있습니다.",
+  "text.rei.support.me.patreon": "Patreon에서 후원하기",
+  "text.rei.support.me.bisect": "BisectHosting에서 SHEDANIEL 코드를 써보세요",
   "text.rei.not.fully.initialized": "아직 REI 초기 설정이 완료되지 않았습니다!",
   "text.rei.not.fully.initialized.tooltip": "누락된 단계: %s\n그래도 계속 해결되지 않으면,\n로그를 가지고 지원을 요청하세요!",
   "text.rei.inventory.highlighting.enabled": "보관함 강조 켬",
   "text.rei.inventory.highlighting.enabled.tooltip": "검색 필터와 일치하지 않는\n슬롯은 회색으로 바뀝니다.\n검색 표시줄을 두 번 클릭하여 모드를 전환할 수 있습니다.",
+  "text.rei.caching.search": "REI가 검색 결과를 캐싱하는 중입니다...",
+  "text.rei.caching.search.step": "%d/%d회 (%s%%)",
   "text.rei.config.menu.dark_theme": "어두운 테마",
   "text.rei.config.menu.craftable_filter": "제작 가능 필터",
   "text.rei.config.menu.display": "화면 설정",
   "text.rei.config.menu.display.remove_recipe_book": "제작법 책 지우기",
+  "text.rei.config.menu.display.left_side_mob_effects": "왼쪽 몹 효과",
+  "text.rei.config.menu.display.left_side_panel": "왼쪽 패널",
+  "text.rei.config.menu.display.scrolling_side_panel": "측면 패널 스크롤",
   "text.rei.config.menu.display.caching_entry_rendering": "항목 렌더링 캐싱",
   "text.rei.config.menu.display.syntax_highlighting": "구문 강조",
+  "text.rei.config.menu.config": "기타 설정",
   "category.rei.crafting": " 제작",
   "category.rei.smelting": "제련",
   "category.rei.smelting.fuel": "연료",
@@ -224,7 +234,6 @@
   "config.roughlyenoughitems.leftSideMobEffects.boolean.true": "왼쪽",
   "config.roughlyenoughitems.fixTabCloseContainer": "바닐라 탭 제작대 수정 (제작법 책이 사용안될 때):",
   "config.roughlyenoughitems.lighterButtonHover": "버튼 호버 효과 더 밝게:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "제작 가능 필터:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "유틸리티 버튼:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "게임 모드 명령어:",
   "config.roughlyenoughitems.commands.giveCommand": "주기 명령어:",
