--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pl_pl.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pl_pl.json
@@ -9,6 +9,8 @@
   "text.rei.search.field.suggestion": "Szukaj...",
   "text.rei.feedback": "Dowolna opinia, którą chcesz przekazać deweloperowi REI? %s aby przesłać swoją opinię!",
   "text.rei.feedback.link": "Kliknij mnie, aby odwiedzić formularz Google",
+  "text.rei.support.me.patreon": "Wesprzyj przez Patreon",
+  "text.rei.support.me.bisect": "Użyj kodu SHEDANIEL na BisectHosting",
   "text.rei.not.fully.initialized": "REI nie został jeszcze w pełni zainicjowany!",
   "text.rei.not.fully.initialized.tooltip": "Brakujące etapy: %s\nJeśli to nie zniknie,\nspróbuj szukać wsparcia z wykorzystaniem logów!",
   "text.rei.inventory.highlighting.enabled": "Podświetlenie ekwipunku włączone",
@@ -62,6 +64,7 @@
   "text.rei.failed_cheat_items": "§cBłąd podczas dawania przedmiotów.",
   "text.rei.too_long_nbt": "§cNBT przedmiotu jest zbyt długie, aby go zastosować w trybie wieloosobowym.",
   "text.rei.performance": "Analiza wydajności",
+  "text.rei.shapeless": "Bezkształtne",
   "ordering.rei.ascending": "Rosnąco",
   "ordering.rei.descending": "Malejąco",
   "ordering.rei.registry": "Rejestr",
@@ -93,6 +96,11 @@
   "text.rei.gamemode_button.tooltip.entry": "Przełącz na %s",
   "text.rei.weather_button.tooltip.dropdown": "Przełącz pogodę: Lista rozwijana",
   "text.rei.weather_button.tooltip.entry": "Przełącz na %s",
+  "text.rei.time_button.tooltip.dropdown": "Zmień pogodę: Lista rozwijana",
+  "text.rei.time_button.name.morn": "Poranek",
+  "text.rei.time_button.name.noon": "Południe",
+  "text.rei.time_button.name.evening": "Wieczór",
+  "text.rei.time_button.name.night": "Noc",
   "text.rei.reload_config": "Przeładuj pluginy",
   "text.rei.config.is.reloading": "Pluginy ładują się ponownie!",
   "text.rei.enabled": "Tak",
@@ -128,10 +136,13 @@
   "text.rei.tiny_potato": "Mały ziemniak",
   "text.rei.add_favorite_widget": "Dodaj...",
   "text.rei.dispose_here": "Usuń tutaj",
+  "text.rei.crash.crash_report": "Otwórz Raport Błędu",
   "text.rei.changelog.title": "Zmiany w REI",
+  "text.rei.changelog.error.missingChangelogFile": "Brak pliku dziennika zmian!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Niepowodzenie przy czytaniu dziennika zmian",
   "favorite.section.gamemode": "Tryb gry",
   "favorite.section.weather": "Pogoda",
+  "favorite.section.time": "Czas",
   "tooltip.rei.fluid_amount": "§7%d Jednostek",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
   "tooltip.rei.drag_to_add_favorites": "§7Przeciągnij, aby dodać to do ulubionych!",
@@ -148,6 +159,7 @@
   "config.roughlyenoughitems.functionality": "Funkcjonalność",
   "config.roughlyenoughitems.advanced": "Zaawansowane",
   "config.roughlyenoughitems.cheating": "Tryb Oszukiwania:",
+  "config.roughlyenoughitems.cheating.when_creative": "Podczas Trybu Kreatywnego",
   "config.roughlyenoughitems.favoritesEnabled": "Przedmioty Ulubione włączone:",
   "config.roughlyenoughitems.keyBindings": "Skróty klawiszowe",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "Pokaż recepturę:",
@@ -189,6 +201,7 @@
   "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Scal widoki z jednakową zawartością:",
   "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Zawsze niewidzialny",
   "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Automatyczne ukrywanie",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Zawsze widoczny",
   "config.roughlyenoughitems.filteredEntries.selectAll": "Zaznacz wszystkie",
   "config.roughlyenoughitems.filteredEntries.selectNone": "Odznacz wszystkie",
   "config.roughlyenoughitems.filteredEntries.hide": "Ukryj zaznaczone",
@@ -234,7 +247,6 @@
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Prawa (Vanilla)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Napraw kontener waniliowej karty (Kiedy Książka receptur jest wyłączona):",
   "config.roughlyenoughitems.lighterButtonHover": "Jaśniejszy przycisk podczas najechania kursorem:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Filtr wykonywalnych przedmiotów:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Przyciski działań:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Komenda do zmiany trybu gry:",
   "config.roughlyenoughitems.commands.giveCommand": "Komenda do pobierania przedmiotów:",
@@ -271,6 +283,7 @@
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Kolorowy",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Kolorowy (podkreślenie)",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Przybliżenie",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Wyróżnione",
   "config.roughlyenoughitems.filteringScreen": "Niestandardowe filtrowanie",
   "config.roughlyenoughitems.filteringRulesScreen": "Dostosowane reguły filtrowania",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Utwórz regułę filtrowania",
