--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_pt.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_pt.json
@@ -67,10 +67,16 @@
   "text.rei.view_all_categories": "Visualizar todas as categorias",
   "text.rei.go_back_first_page": "Retornar para página 1",
   "text.rei.choose_page": "Escolhar página",
+  "text.rei.gamemode_button.tooltip.dropdown": "Alternar Tempo: Dropdown",
   "text.rei.gamemode_button.tooltip.entry": "Mudar para %s",
   "text.rei.weather_button.tooltip.dropdown": "Alternar Tempo: Dropdown",
   "text.rei.weather_button.tooltip.entry": "Mudar para %s",
+  "text.rei.time_button.tooltip.dropdown": "Alternar Tempo: Dropdown",
+  "text.rei.time_button.tooltip.entry": "Mudar para %s",
+  "text.rei.time_button.name.morn": "Manhã",
+  "text.rei.time_button.name.night": "Noite",
   "text.rei.reload_config": "Recarregar Plugins",
+  "text.rei.reload_search": "Recarregar Pesquisa",
   "text.rei.config.is.reloading": "Os plugins estão recarregando!",
   "text.rei.enabled": "Sim",
   "text.rei.disabled": "Não",
@@ -200,7 +206,6 @@
   "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aSim",
   "config.roughlyenoughitems.fixTabCloseContainer": "Correção da Aba do Vanilla (Quando o Livro de Receitas está Desativado):",
   "config.roughlyenoughitems.lighterButtonHover": "Botão Mais Claro ao Pairar o Cursor:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Filtro de Apenas Criáveis:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Butões de Utilidades:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Comando de Modo de Jogo:",
   "config.roughlyenoughitems.commands.giveCommand": "Comando de Dar Item:",
