--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
@@ -9,6 +9,10 @@
   "text.rei.search.field.suggestion": "Поиск...",
   "text.rei.feedback": "Хотите оставить отзыв разработчикам REI? %s, чтобы оставить свой отзыв!",
   "text.rei.feedback.link": "Нажмите сюда и заполните Google Форму",
+  "text.rei.support.me": "Поддержите меня, чтобы продолжать делать REI лучше!",
+  "text.rei.support.me.desc": "Как сторонник программы patreon, вы получаете возможность использовать последнюю версию REI для снапшотов Minecraft.\nКроме того, вы можете поддержать меня финансово, арендовав сервер BisectHosting.\n\n%s\n%s",
+  "text.rei.support.me.patreon": "Пожертвовать на Patreon",
+  "text.rei.support.me.bisect": "Используйте код SHEDANIEL на BisectHosting",
   "text.rei.not.fully.initialized": "REI ещё не полностью инициализирован!",
   "text.rei.not.fully.initialized.tooltip": "Пропущены этапы: %s\nЕсли это не исчезло,\nпопробуйте поискать проблему в журналах!",
   "text.rei.inventory.highlighting.enabled": "Подсветка инвентаря включена",
@@ -64,8 +68,8 @@
   "text.rei.cheat_items": "Выдано x{item_count} [{item_name}] игроку {player_name}",
   "text.rei.failed_cheat_items": "§cНе удалось выдать предметы.",
   "text.rei.too_long_nbt": "§cNBT предмета слишком длинный для использования в сетевой игре.",
-  "text.rei.tag_match": "Принимает тег: #%s",
   "text.rei.performance": "Анализ производительности",
+  "text.rei.shapeless": "Бесформенные",
   "ordering.rei.ascending": "По возрастанию",
   "ordering.rei.descending": "По убыванию",
   "ordering.rei.registry": "Регистр",
@@ -217,6 +221,7 @@
   "config.roughlyenoughitems.search.asyncSearch": "Асинхронный поиск:",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Размер раздела асинхронного поиска:",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "Компактные вкладки:",
+  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Компактные кнопки со стрелками Tab:",
   "config.roughlyenoughitems.theme": "Тема оформления:",
   "config.roughlyenoughitems.theme.dark": "Тёмная тема",
   "config.roughlyenoughitems.theme.light": "Светлая тема",
@@ -254,7 +259,6 @@
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Справа (Стандартное)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Восстановление вкладки стандартного контейнера (когда книга рецептов отключена):",
   "config.roughlyenoughitems.lighterButtonHover": "Подсвеченная кнопка при наведении:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Фильтр по создаваемым предметам:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Кнопки утилит:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Команда смены игрового режима:",
   "config.roughlyenoughitems.commands.giveCommand": "Команда выдачи предметов:",
