--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/tr_tr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/tr_tr.json
@@ -9,10 +9,27 @@
   "text.rei.search.field.suggestion": "Ara...",
   "text.rei.feedback": "REI geliştiricisine bir geri bildirim vermek ister misin? % adresinden gönderebilirsin!",
   "text.rei.feedback.link": "Google Form'u ziyaret etmek için bana tıkla",
+  "text.rei.support.me": "REI'yı daha iyi yapmama devam etmem için bana destek verin!",
+  "text.rei.support.me.desc": "REI'ın patreon destekçisi olarak, REI'ın en son sürümünü Minecraft snapshotlarında kullanabileceksin.\nAlternatif olarak, beni ayrıca BisectHosting'den, server kiralayarak finansal olarak destekleyebilirsin.\n\n%s\n%s",
+  "text.rei.support.me.patreon": "Patreonda Bağış yap",
+  "text.rei.support.me.bisect": "BisectHosting'de SHEDANIEL kodunu kullan",
   "text.rei.not.fully.initialized": "REI henüz tam olarak başlatılamadı!",
   "text.rei.not.fully.initialized.tooltip": "Kayıp bölümler: %s\nEğer bu uyarı bir yere gitmezse,\nsistem kayıtlarıyla beraber bir yardım almayı deneyin!",
   "text.rei.inventory.highlighting.enabled": "Envanter Vurgulama Açık",
   "text.rei.inventory.highlighting.enabled.tooltip": "Bu arama filtresinde uyuşmayan yuvaları gri yapmaya yarar.\nBu modu açıp/kapatmak için arama çubuğuna çift tıklayın.",
+  "text.rei.caching.search": "REI arama sonuçlarını kaydediyor...",
+  "text.rei.caching.search.step": "Adım %d/%d (%s%%):",
+  "text.rei.config.menu.dark_theme": "Koyu Tema",
+  "text.rei.config.menu.craftable_filter": "Üretilebilenler Filtresi",
+  "text.rei.config.menu.display": "Görüntü Ayarları",
+  "text.rei.config.menu.display.remove_recipe_book": "Tarif Kitabını Kaldır",
+  "text.rei.config.menu.display.left_side_mob_effects": "Sol Taraf Mob Etkileri",
+  "text.rei.config.menu.display.left_side_panel": "Sol Yan Panel",
+  "text.rei.config.menu.display.scrolling_side_panel": "Yan Panel Kaydırılıyor",
+  "text.rei.config.menu.display.caching_entry_rendering": "Girdi İşlemeleri Kaydediliyor",
+  "text.rei.config.menu.display.side_search_field": "Yan Arama Bölümü",
+  "text.rei.config.menu.display.syntax_highlighting": "Semtaks Vurgulama",
+  "text.rei.config.menu.config": "Daha Fazla Seçenek..",
   "category.rei.crafting": "Üretim",
   "category.rei.smelting": "Isıtma",
   "category.rei.smelting.fuel": "Yakıt",
@@ -39,6 +56,10 @@
   "category.rei.beacon_payment": "Fener Maliyeti",
   "category.rei.tilling": "Toprağı işlemek",
   "category.rei.pathing": "Yol Yapmak",
+  "category.rei.waxing": "Mumyalama",
+  "category.rei.wax_scraping": "Mumya Sökümü",
+  "category.rei.oxidizing": "Oksitlenme",
+  "category.rei.oxidation_scraping": "Oksitlenme Sökümü",
   "category.rei.information": "Bilgi",
   "text.rei.composting.chance": "§e%d%% Şans",
   "text.rei.composting.page": "%d. Sayfa",
@@ -47,18 +68,22 @@
   "text.rei.cheat_items": "{player_name} oyuncusuna {item_count} tane [{item_name}§f] verildi.",
   "text.rei.failed_cheat_items": "§cEşyalar verilemedi.",
   "text.rei.too_long_nbt": "§cItem NBT, çok oyunculuda uygulanamayacak kadar uzun.",
+  "text.rei.performance": "Performans Analizi",
+  "text.rei.shapeless": "Şekilsiz",
   "ordering.rei.ascending": "Artan",
   "ordering.rei.descending": "Azalan",
   "ordering.rei.registry": "Kayıt",
   "ordering.rei.name": "İsim",
   "ordering.rei.item_groups": "Eşya Grupları",
   "text.auto_craft.move_items": "Eşyaları Taşı",
+  "text.auto_craft.move_items.tooltip": "Hızlıca Üretmek için Ctrl-Tıkla",
   "text.auto_craft.move_items.yog": "NullPointerException!! Oluştur",
   "error.rei.transfer.too_small": "%dx%d ızgarasında eşyalar taşınamadı.",
   "error.rei.not.on.server": "REI sunucuda yok.",
   "error.rei.not.enough.materials": "Yetersiz materyal.",
   "error.rei.internal.error": "İç Hata: %s",
   "error.rei.recipe.not.unlocked": "Tarif, Tarif Kitabı'nda açılmamış.",
+  "error.rei.not.supported.move.items": "Bu tarifte ve konteynırda Öğeyi Taşıma desteklenmiyor.",
   "error.rei.no.handlers.applicable": "İşleyiciler uygulanabilir değil.",
   "error.rei.multi.errors": "Çoklu Hata:",
   "rei.rei.no.slot.in.inv": "Eşya için envanterde yeterli alan bulunamıyor.",
@@ -71,11 +96,18 @@
   "text.rei.view_all_categories": "Tüm Kategorileri Görüntüle",
   "text.rei.go_back_first_page": "1. Sayfaya Dön",
   "text.rei.choose_page": "Sayfa Seç",
+  "text.rei.shift_click_to": "%s için Shift-Tıkla",
   "text.rei.gamemode_button.tooltip.dropdown": "Oyun Modunu Değiştir: Açılır Liste",
   "text.rei.gamemode_button.tooltip.entry": "%s 'e geç",
   "text.rei.weather_button.tooltip.dropdown": "Hava Durumunu Değiştir: Açılır Liste",
   "text.rei.weather_button.tooltip.entry": "%s 'e geç",
+  "text.rei.time_button.tooltip.entry": "%s 'e geç",
+  "text.rei.time_button.name.morn": "Sabah",
+  "text.rei.time_button.name.noon": "Öğlen",
+  "text.rei.time_button.name.evening": "Akşam",
+  "text.rei.time_button.name.night": "Gece",
   "text.rei.reload_config": "Eklentileri Yeniden Yükle",
+  "text.rei.reload_search": "Aramayı Yenile",
   "text.rei.config.is.reloading": "Eklentiler yeniden yükleniyor!",
   "text.rei.enabled": "Evet",
   "text.rei.disabled": "Hayır",
@@ -109,8 +141,16 @@
   "text.rei.subsets": "Alt Setler",
   "text.rei.tiny_potato": "Minnacık Patatesler",
   "text.rei.add_favorite_widget": "Ekle...",
+  "text.rei.dispose_here": "Burada Kullan",
+  "text.rei.crash.title": "REI Çöktü!",
+  "text.rei.crash.description": "§c Roughly Enough Item \"%s%\" sırasında bir çökmeyle karşılaştı.\n\n§fÇökmenin detayları aşşağıda gösteriliyor. Lütfen buna sebep olan modu bulup modun yayınlayıcısına aşşağıda verilen çökme kaydı ile birlikte rapor edin.\n\nEğer çökmenin Roughly Enough Item'daki bir hatadan geldiğine inanıyorsanız, lütfen hata ayıklayıcımıza rapor edin.\n\n§6Yardımınız için Sağolun!",
+  "text.rei.crash.crash_report": "Çökme Raporu Aç",
+  "text.rei.changelog.title": "REI Değişimkaydı",
+  "text.rei.changelog.error.missingChangelogFile": "Değişimkaydı Dosyası Eksik!",
+  "text.rei.changelog.error.failedToReadChangelogFile": "Değişimkaydı Dosyasını okumakta Başarısız olundu!",
   "favorite.section.gamemode": "Oyun Modu",
   "favorite.section.weather": "Hava Durumu",
+  "favorite.section.time": "Zaman",
   "tooltip.rei.fluid_amount": "§7%d Ölçek",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
   "tooltip.rei.drag_to_add_favorites": "§7Favorilere eklemek için kukarı doğru sürükleyin!",
@@ -127,6 +167,7 @@
   "config.roughlyenoughitems.functionality": "İşlevsellik",
   "config.roughlyenoughitems.advanced": "Gelişmiş",
   "config.roughlyenoughitems.cheating": "Hile:",
+  "config.roughlyenoughitems.cheating.when_creative": "Yaratıcı Modunda",
   "config.roughlyenoughitems.favoritesEnabled": "Favoriler Açık:",
   "config.roughlyenoughitems.keyBindings": "Tuş Atamaları",
   "config.roughlyenoughitems.keyBindings.recipeKeybind": "Tarifi Göster:",
@@ -165,6 +206,11 @@
   "config.roughlyenoughitems.layout.configButtonLocation": "Ayar Tuş Konumu:",
   "config.roughlyenoughitems.layout.configButtonLocation.upper": "Üst",
   "config.roughlyenoughitems.layout.configButtonLocation.lower": "Düşük",
+  "config.roughlyenoughitems.layout.mergeDisplayUnderOne": "Görüntüleri eşit bir şekilde İçeriklerle birleştir:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode": "Favorilere Araç Tuşu Ekle:",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_invisible": "Her zaman Görünmez",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.auto_hide": "Otomatik Gizle",
+  "config.roughlyenoughitems.layout.favoriteAddWidgetMode.always_visible": "Her zaman görünür",
   "config.roughlyenoughitems.filteredEntries.selectAll": "Hepsini Seç",
   "config.roughlyenoughitems.filteredEntries.selectNone": "Tüm Seçimleri Kaldır",
   "config.roughlyenoughitems.filteredEntries.hide": "Seçilenleri Gizle",
@@ -174,6 +220,7 @@
   "config.roughlyenoughitems.search.asyncSearch": "Desenkronize Arama:",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Eş Zamansız Arama Bölümü Boyutu:",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "Küçük Sekmeler:",
+  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Ok Sekmesi Butonunu Kompaktla:",
   "config.roughlyenoughitems.theme": "Görünüm Teması:",
   "config.roughlyenoughitems.theme.dark": "Koyu Tema",
   "config.roughlyenoughitems.theme.light": "Açık Tema",
@@ -182,6 +229,7 @@
   "config.roughlyenoughitems.recipeBorder.default": "Varsayılan",
   "config.roughlyenoughitems.recipeBorder.none": "Yok",
   "config.roughlyenoughitems.layout.maxRecipesPerPage": "Bir Sayfa Başına Maksimum Tarif:",
+  "config.roughlyenoughitems.layout.maxRecipesPageHeight": "Tarif Sayfasının olabilecek En fazla Yüksekliği",
   "config.roughlyenoughitems.accessibility.displayPanelLocation": "Girdi Listesi Yeri:",
   "config.roughlyenoughitems.accessibility.displayPanelLocation.left": "Sol Taraf",
   "config.roughlyenoughitems.accessibility.displayPanelLocation.right": "Sağ Taraf",
@@ -207,7 +255,6 @@
   "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aEvet",
   "config.roughlyenoughitems.fixTabCloseContainer": "Vanilla Sekme Penceresini Düzelt (Tarif Kitabı Devre Dışıyken):",
   "config.roughlyenoughitems.lighterButtonHover": "Daha Açık İmleç Üstü Tuş:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Üretilebilme Filtresi:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Araç Tuşları:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Oyun Modu Komutu:",
   "config.roughlyenoughitems.commands.giveCommand": "Komut Ver:",
