--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/uk_ua.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/uk_ua.json
@@ -9,10 +9,26 @@
   "text.rei.search.field.suggestion": "Пошук...",
   "text.rei.feedback": "Хочете залишити відгук розробнику REI? %s, щоб надіслати свій відгук!",
   "text.rei.feedback.link": "Натисніть на мене, щоб відвідати Google Форму",
+  "text.rei.support.me": "Підтримайте мене, щоб продовжувати покращувати REI!",
+  "text.rei.support.me.desc": "Як patreon, який підтримує REI, ви можете використовувати останню версію REI для снапшотів Minecraft.\nКрім того, ви також можете підтримати мене фінансово, орендуючи сервер BisectHosting.\n\n%s\n%s",
+  "text.rei.support.me.patreon": "Підтримати через Patreon",
+  "text.rei.support.me.bisect": "Скористайтеся кодом SHEDANIEL на BisectHosting",
   "text.rei.not.fully.initialized": "REI ще не повністю ініціалізовано!",
   "text.rei.not.fully.initialized.tooltip": "Відсутні етапи: %s\nЯкщо це не зникне,\nспробуйте пошукати підтримку із логів!",
   "text.rei.inventory.highlighting.enabled": "Підсвічування інвентарю увімкнено",
   "text.rei.inventory.highlighting.enabled.tooltip": "Це робить слоти, які не збігаються\nз фільтром пошуку сірим.\nДвічі клацніть на панелі пошуку, щоб перемкнути цей режим.",
+  "text.rei.caching.search": "REI кешує результати пошуку...",
+  "text.rei.caching.search.step": "Крок %d/%d (%s%%):",
+  "text.rei.config.menu.dark_theme": "Темна тема",
+  "text.rei.config.menu.craftable_filter": "Фільтр для крафта",
+  "text.rei.config.menu.display": "Налаштування дисплея...",
+  "text.rei.config.menu.display.remove_recipe_book": "Видалити книгу рецептів",
+  "text.rei.config.menu.display.left_side_panel": "Ліва бічна панель",
+  "text.rei.config.menu.display.scrolling_side_panel": "Бічна панель прокрутки",
+  "text.rei.config.menu.display.caching_entry_rendering": "Швидкий вивід предметів",
+  "text.rei.config.menu.display.side_search_field": "Поле пошуку",
+  "text.rei.config.menu.display.syntax_highlighting": "Підсвічування синтаксису",
+  "text.rei.config.menu.config": "Додаткові налаштування...",
   "category.rei.crafting": "Створення",
   "category.rei.smelting": "Виплавляння",
   "category.rei.smelting.fuel": "Паливо",
@@ -212,7 +228,6 @@
   "config.roughlyenoughitems.disableRecipeBook.boolean.false": "§aТак",
   "config.roughlyenoughitems.fixTabCloseContainer": "Відновлення стандартної вкладки контейнера (коли книга рецептів відключена):",
   "config.roughlyenoughitems.lighterButtonHover": "Підсвічена кнопка при наведенні:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Фільтр по створюваним предметів:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Кнопка утиліт:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Команда зміни ігрового режиму:",
   "config.roughlyenoughitems.commands.giveCommand": "Команда видачі предметів:",
