--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
@@ -68,7 +68,7 @@
   "text.rei.cheat_items": "已将 {item_count} 个 [{item_name}§f] 给予 {player_name}",
   "text.rei.failed_cheat_items": "§c物品给予失败",
   "text.rei.too_long_nbt": "§c物品 NBT 太长，不能应用于多人游戏.",
-  "text.rei.tag_match": "接受标签: #%s",
+  "text.rei.tag_accept": "标签：#%s",
   "text.rei.performance": "性能分析",
   "text.rei.shapeless": "无序合成",
   "ordering.rei.ascending": "顺序",
@@ -85,6 +85,7 @@
   "error.rei.internal.error": "内部错误: %s",
   "error.rei.recipe.not.unlocked": "配方未解锁",
   "error.rei.not.supported.move.items": "此配方和容器不支持移动物品。",
+  "text.rei.save.recipes": "按 %s 将其添加到收藏夹。",
   "error.rei.no.handlers.applicable": "不支持的工作站。",
   "error.rei.multi.errors": "多个错误：",
   "rei.rei.no.slot.in.inv": "您的物品栏已满",
@@ -131,6 +132,7 @@
   "text.rei.remove_favorites_tooltip": " \n§7按 %s 可以将其从收藏夹中移除。",
   "text.rei.working_station": "工作站",
   "text.rei.release_export": "释放 %s 以导出此配方",
+  "text.rei.ask_to_export": "您是否想继续导出 %s ？",
   "text.rei.recipe_id": "\n%s配方 ID: %s",
   "text.rei.recipe_screen_type.selection": "合成界面样式选择",
   "text.rei.recipe_screen_type.selection.sub": "你随时可以通过配置界面再次编辑此设置.",
