--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
@@ -68,8 +68,8 @@
   "text.rei.cheat_items": "{player_name} recebeu {item_count} unidade(s) de [{item_name}§f].",
   "text.rei.failed_cheat_items": "§cFalha ao obter itens.",
   "text.rei.too_long_nbt": "§cO NBT do item é longo demais para ser aplicado ao modo multijogador.",
-  "text.rei.tag_match": "Tag aceita: #%s",
   "text.rei.performance": "Análise de desempenho",
+  "text.rei.shapeless": "Sem forma",
   "ordering.rei.ascending": "Crescente",
   "ordering.rei.descending": "Descrescente",
   "ordering.rei.registry": "Registro",
@@ -150,6 +150,7 @@
   "text.rei.changelog.error.failedToReadChangelogFile": "Falha ao ler o log!",
   "favorite.section.gamemode": "Modo de jogo",
   "favorite.section.weather": "Tempo",
+  "favorite.section.time": "Tempo",
   "tooltip.rei.fluid_amount": "§7%d unidade(s)",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
   "tooltip.rei.drag_to_add_favorites": "§7Arraste até aqui para adicionar aos favoritos!",
@@ -219,6 +220,7 @@
   "config.roughlyenoughitems.search.asyncSearch": "Pesquisa assíncrona:",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Tamanho de partição da pesquisa assíncrona:",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "Guias compactas:",
+  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Botões de guias compactas:",
   "config.roughlyenoughitems.theme": "Tema:",
   "config.roughlyenoughitems.theme.dark": "Escuro",
   "config.roughlyenoughitems.theme.light": "Claro",
@@ -256,7 +258,6 @@
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Direita (padrão)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Corrigir contêiner de guias padrão (livro de receitas desativado):",
   "config.roughlyenoughitems.lighterButtonHover": "Cursor mínimo do botão:",
-  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Filtro de fabricáveis:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Botões utilitários:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Comando do modo de jogo:",
   "config.roughlyenoughitems.commands.giveCommand": "Comando \"give\":",
