--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
@@ -68,7 +68,8 @@
   "text.rei.cheat_items": "已將 {item_count} 個 [{item_name}§f] 給予 {player_name}",
   "text.rei.failed_cheat_items": "§c給予物品失敗",
   "text.rei.too_long_nbt": "§c物品 NBT 過長，不適用於多人遊戲。",
-  "text.rei.tag_match": "接受標籤: #%s",
+  "text.rei.accepts": "接受以下物品:",
+  "text.rei.tag_accept": "標籤: #%s",
   "text.rei.performance": "效能分析",
   "text.rei.shapeless": "無序合成",
   "ordering.rei.ascending": "從 A 到 Z",
@@ -85,6 +86,7 @@
   "error.rei.internal.error": "內部錯誤： %s",
   "error.rei.recipe.not.unlocked": "合成書中的配方未解鎖！",
   "error.rei.not.supported.move.items": "此配方和此容器不支援移動物品。",
+  "text.rei.save.recipes": "按下《%s》鍵將此加入我的最愛。",
   "error.rei.no.handlers.applicable": "不支持的工作站！",
   "error.rei.multi.errors": "多重錯誤：",
   "rei.rei.no.slot.in.inv": "物品欄已沒有空間！",
@@ -131,6 +133,7 @@
   "text.rei.remove_favorites_tooltip": " \n§7按下《%s》鍵將此從我的最愛中移除。",
   "text.rei.working_station": "工作台",
   "text.rei.release_export": "釋放 %s 以匯出",
+  "text.rei.ask_to_export": "您是否打算繼續匯出 %s ？",
   "text.rei.recipe_id": "\n%s配方識別碼： %s",
   "text.rei.recipe_screen_type.selection": "配方畫面類型選擇",
   "text.rei.recipe_screen_type.selection.sub": "你隨時可以在設定頁面中再次改變這個選項。",
