Implement Config Addons, Close #908

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -71,6 +71,7 @@
   "text.rei.accepts": "Accepts following:",
   "text.rei.tag_accept": "Tag: #%s",
   "text.rei.performance": "Performance Analysis",
+  "text.rei.addons": "REI Addons",
   "text.rei.shapeless": "Shapeless",
   "ordering.rei.ascending": "Ascending",
   "ordering.rei.descending": "Descending",
